# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: loader.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: test.txt  test_flat.txt  test_tree.txt
