[tool.poetry]
name = "paspr_gendiff"
version = "0.1.2"
description = "tool for presenting the differences in configuration files"
authors = ["Your Name <you@example.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"



